--- a/Taller1/index.html
+++ b/Taller1/index.html
@@ -5,49 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Listado de Series</title>
   <style>
-    /* Estilo para el encabezado de la tabla */
+  
     thead {
-      background-color: white; /* Fondo turquesa para la fila de encabezado */
+      background-color: white; 
     }
 
     th {
-      font-weight: bold; /* Texto en negrita */
-      text-align: left; /* Alineación a la izquierda */
-      padding: 12px; /* Espaciado entre celdas */
+      font-weight: bold; 
+      text-align: left;
+      padding: 12px; 
     }
 
     tr {
-        background-color: whitesmoke; /* Fondo gris claro para todas las filas */
+        background-color: whitesmoke; 
         }
 
 
     td {
-      padding: 10px; /* Espaciado entre celdas */
-      text-align: left; /* Alineación a la izquierda */
+      padding: 10px;
+      text-align: left;
     }
 
-    /* Estilo específico para la fila del título "TV Series" */
+
     tr.title-row {
-      background-color: white; /* Fondo turquesa para la fila del título */
+      background-color: white; 
     }
 
     th{
-      font-weight: bold; /* Texto en negrita */
-      color: black; /* Color del texto blanco */
-      text-align: left; /* Alineación a la izquierda */
-      padding: 10px; /* Espaciado entre celdas */
+      font-weight: bold; 
+      color: black; 
+      text-align: left; 
+      padding: 10px; 
     }
 
     th {
-      font-size: 18px; /* Tamaño de fuente más pequeño */
+      font-size: 18px; 
     }
 
     td:nth-child(1) {
-      font-weight: bold; /* Texto en negrita para la primera columna (ID) */
+      font-weight: bold; 
     }
 
     td:nth-child(2) {
-      color:rgb(57, 159, 222); /* Texto en negrita para la primera columna (ID) */
+      color:rgb(57, 159, 222); 
     }
 
   </style>
